cleanup and working again