@@ -1,36 +1,31 @@
 package work.lclpnet.launcherlogic.util;
 
-import java.io.UnsupportedEncodingException;
-import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
 public class URLUtil {
 
-	public static Map<String, String> splitQuery(URL url) throws UnsupportedEncodingException {
-		return splitQuery(url.getQuery());
-	}
-
-	public static Map<String, String> splitQuery(String query) throws UnsupportedEncodingException {
+	public static Map<String, String> splitQuery(String query) {
 		Map<String, String> query_pairs = new LinkedHashMap<String, String>();
 		String[] pairs = query.split("&");
 		for (String pair : pairs) {
 			int idx = pair.indexOf("=");
-			query_pairs.put(URLDecoder.decode(pair.substring(0, idx), "UTF-8"), URLDecoder.decode(pair.substring(idx + 1), "UTF-8"));
+			query_pairs.put(URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8), URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8));
 		}
 		return query_pairs;
 	}
 
-	public static String joinQuery(Map<String, String> params) throws UnsupportedEncodingException {
+	public static String joinQuery(Map<String, String> params) {
 		StringBuilder builder = new StringBuilder();
 		for (var entry : params.entrySet()) {
 			if(builder.length() > 0) builder.append("&");
 			builder
-			.append(URLEncoder.encode(entry.getKey(), "UTF-8"))
+			.append(URLEncoder.encode(entry.getKey(), StandardCharsets.UTF_8))
 			.append("=")
-			.append(URLEncoder.encode(entry.getValue(), "UTF-8"));
+			.append(URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8));
 		}
 		return builder.toString();
 	}
